--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/libs/skel';
+
 .attention {
   margin-bottom: 2px;
   border-bottom: 2px solid #ff9806;
@@ -19,13 +21,13 @@
   display: inline-block;
 }
 
-@keyframes wave-animation {
-    0% { transform: rotate( 0.0deg) }
-   10% { transform: rotate(14.0deg) }
-   20% { transform: rotate(-8.0deg) }
-   30% { transform: rotate(14.0deg) }
-   40% { transform: rotate(-4.0deg) }
-   50% { transform: rotate(10.0deg) }
-   60% { transform: rotate( 0.0deg) }
+@include keyframes('wave-animation') {
+  0% { transform: rotate( 0.0deg) }
+  10% { transform: rotate(14.0deg) }
+  20% { transform: rotate(-8.0deg) }
+  30% { transform: rotate(14.0deg) }
+  40% { transform: rotate(-4.0deg) }
+  50% { transform: rotate(10.0deg) }
+  60% { transform: rotate( 0.0deg) }
   100% { transform: rotate( 0.0deg) }
 }
